k8s/manifests-18d23d/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-18d23d
  namespace: journee
  labels:
    app: journee-18d23d
spec:
  replicas: 3
  selector:
    matchLabels:
      app: journee-18d23d
  template:
    metadata:
      labels:
        app: journee-18d23d
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-18d23d
          image: gcr.io/my-docker-471807/journee:18d23d-5ed086
          ports:
            - containerPort: 3000
