k8s/manifests-18d23d/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-18d23d
  namespace: journee
spec:
  selector:
    app: journee-18d23d
  ports:
    - port: 80
      targetPort: 3000
